--- a/app/src/main/res/layout/layout_module_2.xml
+++ b/app/src/main/res/layout/layout_module_2.xml
@@ -12,7 +12,8 @@
         android:layout_height="300dp"
         android:layout_marginLeft="100dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:tag="cell_2_1" />
 
     <FrameLayout
         android:id="@+id/cell_2"
@@ -20,7 +21,8 @@
         android:layout_height="300dp"
         android:layout_marginLeft="100dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:tag="cell_2_2" />
 
     <FrameLayout
         android:id="@+id/cell_3"
@@ -28,7 +30,8 @@
         android:layout_height="300dp"
         android:layout_marginLeft="100dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:tag="cell_2_3" />
 
     <FrameLayout
         android:id="@+id/cell_4"
@@ -36,5 +39,6 @@
         android:layout_height="300dp"
         android:layout_marginLeft="100dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:tag="cell_2_4" />
 </LinearLayout>
