--- a/app/src/main/res/layout/layout_module_2.xml
+++ b/app/src/main/res/layout/layout_module_2.xml
@@ -3,42 +3,50 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:gravity="center">
+    android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/cell_1"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:layout_marginLeft="100dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:tag="cell_2_1" />
+    <include layout="@layout/layout_default_title" />
 
-    <FrameLayout
-        android:id="@+id/cell_2"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:layout_marginLeft="100dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:tag="cell_2_2" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-    <FrameLayout
-        android:id="@+id/cell_3"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:layout_marginLeft="100dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:tag="cell_2_3" />
+        <FrameLayout
+            android:id="@+id/cell_2_1"
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            android:layout_marginLeft="100dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:tag="cell_2_1" />
 
-    <FrameLayout
-        android:id="@+id/cell_4"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:layout_marginLeft="100dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:tag="cell_2_4" />
+        <FrameLayout
+            android:id="@+id/cell_2_2"
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            android:layout_marginLeft="100dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:tag="cell_2_2" />
+
+        <FrameLayout
+            android:id="@+id/cell_2_3"
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            android:layout_marginLeft="100dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:tag="cell_2_3" />
+
+        <FrameLayout
+            android:id="@+id/cell_2_4"
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            android:layout_marginLeft="100dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:tag="cell_2_4" />
+    </LinearLayout>
 </LinearLayout>
